[package]
name = "lusl"
description = "Lossless Uncompressed Serializer Library"
version = "2.0.1"
edition = "2021"
authors = ["Kim tae hyeon <kimth0734@gmail.com>"]
license = "MIT"
repository = "https://github.com/altair823/LUSL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.5"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rust-argon2 = "1.0.0"
flate2 = "1.0.25"